# hypermodern_python_test

./: .coverage  .flake8  .gitignore  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml  tests.yml
.github/workflows/: release-drafter.yml  release.yml  test-pypi.yml
docs/: conf.py  index.rst  reference.rst
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
docs/_build/_sources/: index.rst.txt
src/hypermodern_python_test/: console.py  wikipedia.py
src/hypermodern_python_test_this_is_a_test/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
